A few more fixes
Fixed carousel item sizing,

made section image sizes consistent,

regulated font-sizes

more

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -17,8 +17,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles_events.css?v=1.0">
-        <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
 
 
 </head>
@@ -67,8 +67,9 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="#!">Firefly</a>
-                        <a class="dropdown-item" href="#crew">Our Crew</a>
+
                         <a class="dropdown-item" href="rise.html">Rise</a>
+                        <a class="dropdown-item" href="#crew">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -108,10 +109,13 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east Wichita. A family farm site for over 100 years, Firefly Farm has been in the Garcia family since originally purchased by Robert and Violet Garcia in 1950. A commercial farm since 2015, the land has seen many iterations and events -- a world-class motorcycle shop and a barn leveled by a tornado to name just a few!
+    <div class="body-text just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east Wichita. A
+        family farm site for over 100 years, Firefly Farm has been in the Garcia family since originally purchased by
+        Robert and Violet Garcia in 1950. A commercial farm since 2015, the land has seen many iterations and events --
+        a world-class motorcycle shop and a barn leveled by a tornado to name just a few!
 
-        
-        
+
+
     </div>
 
     <div class="row1">
@@ -121,15 +125,23 @@
                 What is this section? But real
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                    Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that by following nature’s lead and nurturing the health and ecology of the soil, we thereby promote our own health and happiness. Using organic and regenerative practices in all we do, we seek out the most delicious and nutritious varieties to bring to our community and local food system.
+                Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that
+                by following nature’s lead and nurturing the health and ecology of the soil, we thereby promote our own
+                health and happiness. Using organic and regenerative practices in all we do, we seek out the most
+                delicious and nutritious varieties to bring to our community and local food system.
                 <br><br>
-                    As much as possible we love to support biodiverse and sustainable agriculture using dozens of heirloom seed and rootstock varieties for our produce. Through our partnership with Tallgrass Hemp & Cannabis we are excited to contribute to the research and resurgence of hemp, Kansas’ newest and oldest fiber, grain and food crop.
-        <br><br>
-        Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for up-to-date info on all that's growing at Firefly Farm.
+                As much as possible we love to support biodiverse and sustainable agriculture using dozens of heirloom
+                seed and rootstock varieties for our produce. Through our partnership with Tallgrass Hemp & Cannabis we
+                are excited to contribute to the research and resurgence of hemp, Kansas’ newest and oldest fiber, grain
+                and food crop.
+                <br><br>
+                Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
+                farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list
+                for up-to-date info on all that's growing at Firefly Farm.
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/mainphotocrop.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/maincropsectrc.jpg"></div>
     </div>
     <!-- <div class="row2">
 
@@ -161,12 +173,12 @@
           </div>
         </div>
       </div> -->
-      <!-- End of Working Carousel -->
-    <div class="secthead centered" style="font-size:8rem!important" id="crew">our crew</div>
+    <!-- End of Working Carousel -->
+    <div class="secthead centered" id="crew">our crew</div>
 
     <div class="container1">
         <div class="col1 colbio">
-            <div class="secthead m-5 lhead farmhand" style="font-size:5rem!important" align="center">
+            <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
                 Leah
             </div>
             <div class="leahb centered"><img src="../img/crew/leahb.jpg" class="bio"></div>
@@ -192,7 +204,7 @@
 
         </div>
         <div class="col2 colbio">
-            <div class="secthead m-5 rhead farmhand" style="font-size:5rem!important" align="center">
+            <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
                 Ron
             </div>
             <div class="ronb centered"><img src="../img/crew/ronb.jpg" class="bio"></div>
@@ -220,21 +232,25 @@
     </div>
     <div class="container1">
         <div class="col1 colbio">
-            <div class="secthead m-5 lhead farmhand" style="font-size:5rem!important"  align="center">
+            <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
                 Kyle
             </div>
             <div class="leahb centered"><img src="../img/crew/kyleb.jpg" class="bio"></div>
             <p class="just-txt leahtxt">
-                In addition to teaching high school environmental science, Kyle manages the behind the scenes operations of Firefly and Rise. He first joined the crew for the 2017 growing season. His favorite crop to grow is hot peppers.
+                In addition to teaching high school environmental science, Kyle manages the behind the scenes operations
+                of Firefly and Rise. He first joined the crew for the 2017 growing season. His favorite crop to grow is
+                hot peppers.
             </p>
 
         </div>
         <div class="col2 colbio">
-            <div class="secthead m-5 rhead farmhand" style="font-size:5rem!important"  align="center">
+            <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
                 Tara
             </div>
             <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio"></div>
-            <p class="just-txt rontxt">Tara first joined the Firefly crew for a growing season in 2017 before to pursue a ceramics apprenticeship in Washington. She leads the field growing team at both Firefly and Rise farm. In her free time she creates incredible ceramic pieces. Her favorite crop to grow is kale.
+            <p class="just-txt rontxt">Tara first joined the Firefly crew for a growing season in 2017 before pursuing a
+                ceramics apprenticeship in Washington. She leads the field growing team at both Firefly and Rise farm.
+                In her free time she creates incredible ceramic pieces. Her favorite crop to grow is kale.
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
