--- a/events.html
+++ b/events.html
@@ -67,8 +67,9 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+
                         <a class="dropdown-item" href="rise.html">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -162,12 +163,12 @@
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/plant-salerc.jpg"></div>
     </div>
 
     <div class="row2">
 
-        <div class="c1"><img src="../img/dinnerbarn.jpg"></div>
+        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
         <div class="c2 centered">
             <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
                 summer farm-to-table dinners
@@ -183,7 +184,7 @@
     </div>
 
     <div class="row3">
-        <div class="c3"><img class="fttpic" src="../img/leaffest.jpg"></div>
+        <div class="c3"><img class="fttpic" src="../img/leaffestrc.jpg"></div>
         <div class="c1 m-4">
             <div class="secthead inside-secthead inside-secthead-left" id="fallfest" align="center">
                 fall leaf festival
@@ -259,7 +260,7 @@
         }
 
         #mc_embed_signup label {
-            font-size: 1.5em;
+            font-size: 4rem;
         }
 
         #mc_embed_signup .button {
