--- a/rise.html
+++ b/rise.html
@@ -66,8 +66,9 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+
                         <a class="dropdown-item" href="#!">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -107,7 +108,8 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Firefly is thrilled and honored to announce that Leah Dannar-Garcia has been enlisted by Fidelity Bank to launch a brand new urban agriculture venture.
+    <div class="body-text just-txt">Firefly is thrilled and honored to announce that Leah Dannar-Garcia has been
+        enlisted by Fidelity Bank to launch a brand new urban agriculture venture.
     </div>
 
     <div class="row1">
@@ -117,16 +119,26 @@
                 Rise Farm
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                A <a href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html">new parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as well as an event space.<br /> <br /> 
-When construction wraps on the new space this fall, Rise Farm will provide abundant fresh produce year-round for an upcoming farm-to-table restaurant moving in on the ground floor, as well as for other area restaurants. As a green roof, the farm will also serve to lessen the urban heat island effect while curbing building energy costs and excess stormwater runoff. Most importantly, we are excited to be growing delicious nutritious food right where people eat it!
-<br /><br />Read more about this initiative from Fidelity Bank <a href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/">here</a>. 
+                A <a
+                    href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html">new
+                    parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
+                later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of
+                the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as
+                well as an event space.<br /> <br />
+                When construction wraps on the new space this fall, Rise Farm will provide abundant fresh produce
+                year-round for an upcoming farm-to-table restaurant moving in on the ground floor, as well as for other
+                area restaurants. As a green roof, the farm will also serve to lessen the urban heat island effect while
+                curbing building energy costs and excess stormwater runoff. Most importantly, we are excited to be
+                growing delicious nutritious food right where people eat it!
+                <br /><br />Read more about this initiative from Fidelity Bank <a
+                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/">here</a>.
 
             </p>
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/rise-replace.jpg"></div>
     </div>
 
-   
+
     <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
