--- a/services.html
+++ b/services.html
@@ -66,8 +66,9 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+
                         <a class="dropdown-item" href="rise.html">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -121,12 +122,12 @@
                 grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
                 crop planning to make the most of your new extended season!</p>
         </div>
-        <div class="c3"><img class="plantsale" src="../img/cattunnels.jpg"></div>
+        <div class="c3"><img class="plantsale" src="../img/cattunnelsrc.jpg"></div>
         <div class="c4"></div>
     </div>
 
     <div class="row2">
-        <div class="c1"><img src="../img/consulting.jpg"></div>
+        <div class="c1"><img src="../img/consultingrc.jpg"></div>
         <div class="c2">
             <div class="secthead inside-secthead inside-secthead-right" align="center">
                 consulting
