--- a/shop.html
+++ b/shop.html
@@ -68,8 +68,9 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+
                         <a class="dropdown-item" href="rise.html">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -160,7 +161,9 @@
         produce store - coming soon
     </div>
     <!-- start of collection -->
-    <div id='collection-component-1614376415945'></div>
+
+
+    <!-- <div id='collection-component-1614376415945'></div>
     <script type="text/javascript">
         /*<![CDATA[*/
         (function () {
@@ -307,6 +310,152 @@
             }
         })();
             /*]]>*/
+    </script> -->
+
+    <div id='collection-component-1616960322952'></div>
+    <script type="text/javascript">
+        /*<![CDATA[*/
+        (function () {
+            var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+            if (window.ShopifyBuy) {
+                if (window.ShopifyBuy.UI) {
+                    ShopifyBuyInit();
+                } else {
+                    loadScript();
+                }
+            } else {
+                loadScript();
+            }
+            function loadScript() {
+                var script = document.createElement('script');
+                script.async = true;
+                script.src = scriptURL;
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+                script.onload = ShopifyBuyInit;
+            }
+            function ShopifyBuyInit() {
+                var client = ShopifyBuy.buildClient({
+                    domain: 'firefly-wichita.myshopify.com',
+                    storefrontAccessToken: '0d6d3d0375e410b3b9fb84de298a17a9',
+                });
+                ShopifyBuy.UI.onReady(client).then(function (ui) {
+                    ui.createComponent('collection', {
+                        id: '263714766997',
+                        node: document.getElementById('collection-component-1616960322952'),
+                        moneyFormat: '%24%7B%7Bamount%7D%7D',
+                        options: {
+                            "product": {
+                                "styles": {
+                                    "product": {
+                                        "@media (min-width: 601px)": {
+                                            "max-width": "calc(25% - 20px)",
+                                            "margin-left": "20px",
+                                            "margin-bottom": "50px",
+                                            "width": "calc(25% - 20px)"
+                                        },
+                                        "img": {
+                                            "height": "calc(100% - 15px)",
+                                            "position": "absolute",
+                                            "left": "0",
+                                            "right": "0",
+                                            "top": "0",
+                                            "border-radius": "2rem"
+                                        },
+                                        "imgWrapper": {
+                                            "padding-top": "calc(75% + 15px)",
+                                            "position": "relative",
+                                            "height": "0"
+                                        }
+                                    },
+                                    "button": {
+                                        ":hover": {
+                                            "background-color": "#2b3b3b"
+                                        },
+                                        "background-color": "#304242",
+                                        ":focus": {
+                                            "background-color": "#2b3b3b"
+                                        }
+                                    }
+                                },
+                                "text": {
+                                    "button": "Add to cart"
+                                }
+                            },
+                            "productSet": {
+                                "styles": {
+                                    "products": {
+                                        "@media (min-width: 601px)": {
+                                            "margin-left": "-20px"
+                                        }
+                                    }
+                                }
+                            },
+                            "modalProduct": {
+                                "contents": {
+                                    "img": false,
+                                    "imgWithCarousel": true,
+                                    "button": false,
+                                    "buttonWithQuantity": true
+                                },
+                                "styles": {
+                                    "product": {
+                                        "@media (min-width: 601px)": {
+                                            "max-width": "100%",
+                                            "margin-left": "0px",
+                                            "margin-bottom": "0px"
+                                        }
+                                    },
+                                    "button": {
+                                        ":hover": {
+                                            "background-color": "#2b3b3b"
+                                        },
+                                        "background-color": "#304242",
+                                        ":focus": {
+                                            "background-color": "#2b3b3b"
+                                        }
+                                    }
+                                },
+                                "text": {
+                                    "button": "Add to cart"
+                                }
+                            },
+                            "option": {},
+                            "cart": {
+                                "styles": {
+                                    "button": {
+                                        ":hover": {
+                                            "background-color": "#2b3b3b"
+                                        },
+                                        "background-color": "#304242",
+                                        ":focus": {
+                                            "background-color": "#2b3b3b"
+                                        }
+                                    }
+                                },
+                                "text": {
+                                    "total": "Subtotal",
+                                    "button": "Checkout"
+                                }
+                            },
+                            "toggle": {
+                                "styles": {
+                                    "toggle": {
+                                        "background-color": "#304242",
+                                        ":hover": {
+                                            "background-color": "#2b3b3b"
+                                        },
+                                        ":focus": {
+                                            "background-color": "#2b3b3b"
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                    });
+                });
+            }
+        })();
+/*]]>*/
     </script>
     <!-- end of collection -->
 
