--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- onclick="window.location.href='index.html';" -->
 
     <div class="text-center">
-        <img class="site-logo mt-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
+        <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
             alt="Firefly Farm logo" class="img-fluid">
     </div>
     <!-- <div class="nav-bar">
@@ -109,13 +109,19 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
-                <img src="../img/carousel3.jpg" class="cimg d-block w-100" alt="...">
+                <img src="../img/carousel/carousel1.jpg" class="cimg d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="../img/carousel2.jpg" class="cimg d-block w-100" alt="...">
+                <img src="../img/carousel/carousel2.jpg" class="cimg d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="../img/peppers.jpg" class="cimg d-block w-100" alt="...">
+                <img src="../img/carousel/carousel3.jpg" class="cimg d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <img src="../img/carousel/carousel4.jpg" class="cimg d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <img src="../img/carousel/carousel5.jpg" class="cimg d-block w-100" alt="...">
             </div>
             <!-- <div class="carousel-item" data-bs-interval="5000">
             <img src="../img/carousel3.jpg" class="cimg d-block w-100" alt="...">
@@ -123,7 +129,7 @@
         </div>
     </div>
     <!-- End of Working Carousel -->
-    <div class="motto d-flex flex-column mt-4 flex-lg-row justify-content-lg-around">
+    <div class="motto d-flex flex-column mt-md-4 flex-lg-row justify-content-lg-around">
         <p></p>
         <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
