updating mobile margins
gettin ti sorted.

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -109,7 +109,8 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east Wichita. A
+    <div class="body-text x-marg just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east
+        Wichita. A
         family farm site for over 100 years, Firefly Farm has been in the Garcia family since originally purchased by
         Robert and Violet Garcia in 1950. A commercial farm since 2015, the land has seen many iterations and events --
         a world-class motorcycle shop and a barn leveled by a tornado to name just a few!
@@ -122,9 +123,9 @@
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                What is this section? But real
+                Our farm at firefly
             </div>
-            <p class="just-txt body-text row-text row-text-left">
+            <p class="just-txt row-text body-text row-text-left">
                 Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that
                 by following nature’s lead and nurturing the health and ecology of the soil, we thereby promote our own
                 health and happiness. Using organic and regenerative practices in all we do, we seek out the most
@@ -181,7 +182,7 @@
             <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
                 Leah
             </div>
-            <div class="leahb centered"><img src="../img/crew/leahb.jpg" class="bio"></div>
+            <div class="leahb centered"><img src="../img/crew/leahb.jpg" class="bio biopic"></div>
             <p class="just-txt leahtxt">
                 Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
                 left her with a deep love of animals and the farming life. She spent her early adult years in New York
@@ -207,7 +208,7 @@
             <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
                 Ron
             </div>
-            <div class="ronb centered"><img src="../img/crew/ronb.jpg" class="bio"></div>
+            <div class="ronb centered"><img src="../img/crew/ronb.jpg" class="bio biopic"></div>
             <p class="just-txt rontxt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought
                 the
                 place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
@@ -235,11 +236,13 @@
             <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
                 Kyle
             </div>
-            <div class="leahb centered"><img src="../img/crew/kyleb.jpg" class="bio"></div>
+            <div class="leahb centered"><img src="../img/crew/kyleb.jpg" class="bio biopic"></div>
             <p class="just-txt leahtxt">
-                In addition to teaching high school environmental science, Kyle manages the behind the scenes operations
-                of Firefly and Rise. He first joined the crew for the 2017 growing season. His favorite crop to grow is
-                hot peppers.
+                Kyle is a newly minted high school environmental science teacher with a background in biology, natural
+                resources, and urban agriculture. In addition to teaching, he manages the behind the scenes operations
+                of Firefly and Rise. He first joined the crew during the 2017 growing season before leaving to try on a
+                few other hats. Kyle’s a home chef, an amateur craftsman, and an avid reader--his favorite crops to grow
+                are Pink Brandywine tomatoes, basil, and hot peppers.
             </p>
 
         </div>
@@ -247,10 +250,11 @@
             <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
                 Tara
             </div>
-            <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio"></div>
-            <p class="just-txt rontxt">Tara first joined the Firefly crew for a growing season in 2017 before pursuing a
-                ceramics apprenticeship in Washington. She leads the field growing team at both Firefly and Rise farm.
-                In her free time she creates incredible ceramic pieces. Her favorite crop to grow is kale.
+            <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio biopic"></div>
+            <p class="just-txt rontxt">A Wichita original, Tara got her degree in English Literature at Wichita State
+                University and first joined the Firefly team for a season in the summer of 2017. In addition to growing,
+                Tara is a talented ceramics artist, an avid knitter, and baking enthusiast. Her favorite crops are
+                trellised cucumbers, Dinosaur kale, and Thai peppers.
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
