--- a/events.html
+++ b/events.html
@@ -156,10 +156,11 @@
                 spring plant sale
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                With Spring comes growth, plant sales are fun and we are going to sell you plants!
-                Grow fresh and local tomato plants, herbs, and flowers in your home gardens. These starters will make it
-                easy for you to host your own garden-to-table dinners in no time. Come by and talk to other home
-                gardeners like yourself and bring home some new plants and ideas.
+                Transplant some of the goodness of Firefly farm into your garden during our spring plant sale. We’ve
+                picked and planted a variety of crops to help you jump start your summer harvest. During the plant sale,
+                come to the Firefly greenhouse and pick from tons of fresh and local tomato plants, herbs, veggies, and
+                flowers. These healthy organic starters will make it easy to entice visitors with a pollinator garden,
+                or to start hosting your own garden-to-table dinners.
 
             </p>
         </div>
@@ -185,7 +186,7 @@
 
     <div class="row3">
         <div class="c3"><img class="fttpic" src="../img/leaffestrc.jpg"></div>
-        <div class="c1 m-4">
+        <div class="c1">
             <div class="secthead inside-secthead inside-secthead-left" id="fallfest" align="center">
                 fall leaf festival
             </div>
