--- a/index.html
+++ b/index.html
@@ -152,17 +152,16 @@
             <div class="secthead inside-secthead m-2" align="center">
                 a word about how we grow
             </div>
-            <p class="just-txt m-5">
+            <p class="just-txt m-md-5">
                 We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
                 vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
-                never use genetically modified organisms.
-                We are dedicated to growing fruits and vegetables in ways that don't damage the environment in which
-                they are grown or the people who consume them. Our fertilizers are always organic. We avoid using
-                poisons or toxins to control insects, weeds, and disease; when absolutely necessary, we only use
-                OMRI-approved products.
-                We believe that food grown locally, seasonally, and sustainably doesn't just taste better and isn't just
-                more health inducing but is more humane and socially just, too. We hope you will appreciate the vision
-                we have for our farm and that you will join us in making it a reality by purchasing your produce here.
+                never use genetically modified organisms. We are dedicated to growing fruits and vegetables in ways that
+                don't damage the environment in which they are grown or the people who consume them. Our fertilizers are
+                always organic. We avoid using poisons or toxins to control insects, weeds, and disease; when absolutely
+                necessary, we only use OMRI-approved products. We believe that food grown locally, seasonally, and
+                sustainably doesn't just taste better and isn't just more health inducing but is more humane and
+                socially just, too. We hope you will appreciate the vision we have for our farm and that you will join
+                us in making it a reality by purchasing your produce here.
             </p>
             <p class="signature">- Leah Dannar-Garcia</p>
             <p>owner/operator</p>
