--- a/rise.html
+++ b/rise.html
@@ -17,8 +17,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
     <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
 
 </head>
 
@@ -108,7 +108,7 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Firefly is thrilled and honored to announce that Leah Dannar-Garcia has been
+    <div class="body-text x-marg just-txt">Firefly is thrilled and honored to announce that Leah Dannar-Garcia has been
         enlisted by Fidelity Bank to launch a brand new urban agriculture venture.
     </div>
 
@@ -119,8 +119,8 @@
                 Rise Farm
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                A <a
-                    href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html">new
+                A <a href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html"
+                    target="_blank">new
                     parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
                 later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of
                 the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as
@@ -131,7 +131,8 @@
                 curbing building energy costs and excess stormwater runoff. Most importantly, we are excited to be
                 growing delicious nutritious food right where people eat it!
                 <br /><br />Read more about this initiative from Fidelity Bank <a
-                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/">here</a>.
+                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
+                    target="_blank">here</a>.
 
             </p>
         </div>
