--- a/events.html
+++ b/events.html
@@ -148,6 +148,7 @@
                 </svg></a></div>
     </div>
     <!-- end cos media banner -->
+    
 
     <div class="row1">
 
@@ -156,7 +157,7 @@
                 spring plant sale
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                Transplant some of the goodness of Firefly farm into your garden during our spring plant sale. We’ve
+                Transplant some of the goodness of Firefly Farm into your garden during our spring plant sale. We’ve
                 picked and planted a variety of crops to help you jump start your summer harvest. During the plant sale,
                 come to the Firefly greenhouse and pick from tons of fresh and local tomato plants, herbs, veggies, and
                 flowers. These healthy organic starters will make it easy to entice visitors with a pollinator garden,
@@ -192,7 +193,7 @@
             </div>
             <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and
                 trimmings, makes up almost 13%
-                of landfill waste? During our last Fall leaf drive we put the call out to all our friends and neighbors
+                of landfill waste? During our last fall leaf drive we put the call out to all our friends and neighbors
                 to help divert some of that organic waste, and help build our soil fertility through our compost
                 program. We were thrilled by the popularity of this idea and were quickly overwhelmed with donations!
                 <br><span class="apricots">-
