--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -34,6 +34,10 @@
 </head>
 
 <body>
+    <!-- <div class="text-center">
+        <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
+            alt="Firefly Farm logo" class="img-fluid">
+    </div> -->
     <!-- <div class="nav-bar">
             <p class="strike">&#9</p>
             <p>Home</p>
@@ -117,7 +121,7 @@
                                         placeholder="Type Your Message"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn btn-raised btn-block btn-danger">Send! &rarr;</button>
+                                    <button class="btn btn-raised btn-block btn-danger">Send &rarr;</button>
                                 </div>
                             </form>
                             <div id="error_message" style="width:100%; height:100%; display:none; ">
