--- a/events2.html
+++ b/events2.html
@@ -17,7 +17,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_services.css?v=1.0">
     <link rel="stylesheet" href="css/styles_events.css?v=1.0">
 
 </head>
@@ -39,13 +38,15 @@
             <p>Contact</p>
             <p class="strike">&#9</p>
         </div> -->
-    <!-- <div class="motto">
+    <!-- MOTTO
+    <div class="motto">
         <p></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
         <p></p>
-    </div> -->
+    </div> 
+     -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -72,16 +73,16 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
+                    <a class="nav-link" href="#!" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events <span class="sr-only">(current)</span></a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                        <a class="dropdown-item" href="#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="#fallfest">Fall Leaf Festival</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#!">Services <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -106,41 +107,110 @@
             </div>
         </div>
     </div> -->
-
-
-
+    <!-- Begin Soc. Media Banner -->
+    <div class="bubble">
+        <h1 id="grow">follow Firefly Farm online</h1>
+        <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
+                href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
+                style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
+                    class="niftybutton-facebook" style="display:block;fill:currentColor" data-tag="fac"
+                    data-name="Facebook" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+                    <path
+                        d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z">
+                    </path>
+                </svg></a><a href="https://twitter.com/FarmKansas" target="_blank" rel="noopener noreferrer"
+                style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
+                    class="niftybutton-twitter" style="display:block;fill:currentColor" data-tag="twi"
+                    data-name="Twitter" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+                    <path
+                        d="M419.6 168.6c-11.7 5.2-24.2 8.7-37.4 10.2 13.4-8.1 23.8-20.8 28.6-36 -12.6 7.5-26.5 12.9-41.3 15.8 -11.9-12.6-28.8-20.6-47.5-20.6 -42 0-72.9 39.2-63.4 79.9 -54.1-2.7-102.1-28.6-134.2-68 -17 29.2-8.8 67.5 20.1 86.9 -10.7-0.3-20.7-3.3-29.5-8.1 -0.7 30.2 20.9 58.4 52.2 64.6 -9.2 2.5-19.2 3.1-29.4 1.1 8.3 25.9 32.3 44.7 60.8 45.2 -27.4 21.4-61.8 31-96.4 27 28.8 18.5 63 29.2 99.8 29.2 120.8 0 189.1-102.1 185-193.6C399.9 193.1 410.9 181.7 419.6 168.6z">
+                    </path>
+                </svg></a><a href="https://www.instagram.com/fireflyfarmwichita" target="_blank"
+                rel="noopener noreferrer"
+                style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
+                    class="niftybutton-instagram" style="display:block;fill:currentColor" data-tag="ins"
+                    data-name="Instagram" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+                    <path
+                        d="M256 109.3c47.8 0 53.4 0.2 72.3 1 17.4 0.8 26.9 3.7 33.2 6.2 8.4 3.2 14.3 7.1 20.6 13.4 6.3 6.3 10.1 12.2 13.4 20.6 2.5 6.3 5.4 15.8 6.2 33.2 0.9 18.9 1 24.5 1 72.3s-0.2 53.4-1 72.3c-0.8 17.4-3.7 26.9-6.2 33.2 -3.2 8.4-7.1 14.3-13.4 20.6 -6.3 6.3-12.2 10.1-20.6 13.4 -6.3 2.5-15.8 5.4-33.2 6.2 -18.9 0.9-24.5 1-72.3 1s-53.4-0.2-72.3-1c-17.4-0.8-26.9-3.7-33.2-6.2 -8.4-3.2-14.3-7.1-20.6-13.4 -6.3-6.3-10.1-12.2-13.4-20.6 -2.5-6.3-5.4-15.8-6.2-33.2 -0.9-18.9-1-24.5-1-72.3s0.2-53.4 1-72.3c0.8-17.4 3.7-26.9 6.2-33.2 3.2-8.4 7.1-14.3 13.4-20.6 6.3-6.3 12.2-10.1 20.6-13.4 6.3-2.5 15.8-5.4 33.2-6.2C202.6 109.5 208.2 109.3 256 109.3M256 77.1c-48.6 0-54.7 0.2-73.8 1.1 -19 0.9-32.1 3.9-43.4 8.3 -11.8 4.6-21.7 10.7-31.7 20.6 -9.9 9.9-16.1 19.9-20.6 31.7 -4.4 11.4-7.4 24.4-8.3 43.4 -0.9 19.1-1.1 25.2-1.1 73.8 0 48.6 0.2 54.7 1.1 73.8 0.9 19 3.9 32.1 8.3 43.4 4.6 11.8 10.7 21.7 20.6 31.7 9.9 9.9 19.9 16.1 31.7 20.6 11.4 4.4 24.4 7.4 43.4 8.3 19.1 0.9 25.2 1.1 73.8 1.1s54.7-0.2 73.8-1.1c19-0.9 32.1-3.9 43.4-8.3 11.8-4.6 21.7-10.7 31.7-20.6 9.9-9.9 16.1-19.9 20.6-31.7 4.4-11.4 7.4-24.4 8.3-43.4 0.9-19.1 1.1-25.2 1.1-73.8s-0.2-54.7-1.1-73.8c-0.9-19-3.9-32.1-8.3-43.4 -4.6-11.8-10.7-21.7-20.6-31.7 -9.9-9.9-19.9-16.1-31.7-20.6 -11.4-4.4-24.4-7.4-43.4-8.3C310.7 77.3 304.6 77.1 256 77.1L256 77.1z">
+                    </path>
+                    <path
+                        d="M256 164.1c-50.7 0-91.9 41.1-91.9 91.9s41.1 91.9 91.9 91.9 91.9-41.1 91.9-91.9S306.7 164.1 256 164.1zM256 315.6c-32.9 0-59.6-26.7-59.6-59.6s26.7-59.6 59.6-59.6 59.6 26.7 59.6 59.6S288.9 315.6 256 315.6z">
+                    </path>
+                    <circle cx="351.5" cy="160.5" r="21.5"></circle>
+                </svg></a><a href="https://www.youtube.com/channel/UCy3L69tf8HbzAAFgjmIMIPw" target="_blank"
+                rel="noopener noreferrer"
+                style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
+                    class="niftybutton-youtube" style="display:block;fill:currentColor" data-donate="true"
+                    data-tag="you" data-name="YouTube" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
+                    <path
+                        d="M422.6 193.6c-5.3-45.3-23.3-51.6-59-54 -50.8-3.5-164.3-3.5-215.1 0 -35.7 2.4-53.7 8.7-59 54 -4 33.6-4 91.1 0 124.8 5.3 45.3 23.3 51.6 59 54 50.9 3.5 164.3 3.5 215.1 0 35.7-2.4 53.7-8.7 59-54C426.6 284.8 426.6 227.3 422.6 193.6zM222.2 303.4v-94.6l90.7 47.3L222.2 303.4z">
+                    </path>
+                </svg></a></div>
+    </div>
+    <!-- end cos media banner -->
+    <iframe src="index.html" width="100%" height="600"></iframe>
     <div class="row1">
-        <div class="c2" align="center">
-            <div class="secthead inside-secthead inside-secthead-left" align="center">
-                hoop house design & build
+
+        <div class="c2 centered" align="center">
+            <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
+                spring plant sale
             </div>
-            <p class="just-txt body-text row-text row-text-left">If you are looking to expand your growing season, or
-                get a jump on
-                summer
-                crops, season extension though high tunnels or hoop houses is a great place to start. We can design and
-                source a structure to fit your space and needs. Let us help you find grant sources and navigate the
-                grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
-                crop planning to make the most of your new extended season!</p>
+            <p class="just-txt body-text row-text row-text-left">
+                Transplant some of the goodness of Firefly Farm into your garden during our spring plant sale. We’ve
+                picked and planted a variety of crops to help you jump start your summer harvest. During the plant sale,
+                come to the Firefly greenhouse and pick from tons of fresh and local tomato plants, herbs, veggies, and
+                flowers. These healthy organic starters will make it easy to entice visitors with a pollinator garden,
+                or to start hosting your own garden-to-table dinners.
+
+            </p>
         </div>
-        <div class="c3"><img class="plantsale" src="../img/cattunnelsrc.jpg"></div>
-        <div class="c4"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/plant-salerc.jpg"></div>
     </div>
 
     <div class="row2">
-        <div class="c1"><img src="../img/consultingrc.jpg"></div>
-        <div class="c2">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
-                consulting
+
+        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c2 centered">
+            <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
+                summer farm-to-table dinners
             </div>
-            <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
-                offering, begin a
-                new u-pick
-                blueberry patch or community garden, let us help you plan, price or implement your vision. For more
-                information on how we can help you begin or streamline your farm processes, fill out the <a href="contactform/formpage.html">contact form</a>
-                and tell us a little about what you’re looking for!</p>
+            <p class="just-txt body-text row-text row-text-right">Farm-to-table dinners have been held here in our barns
+                since 2016 to rave
+                reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
+                local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
+                ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made
+                beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to
+                learn about upcoming events.</p>
         </div>
     </div>
-    <h1 id="grow">grow with Firefly Farm online</h1>
+
+    <div class="row3">
+        <div class="c3"><img class="fttpic" src="../img/leaffestrc.jpg"></div>
+        <div class="c1">
+            <div class="secthead inside-secthead inside-secthead-left" id="fallfest" align="center">
+                fall leaf festival
+            </div>
+            <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and
+                trimmings, makes up almost 13%
+                of landfill waste? During our last fall leaf drive we put the call out to all our friends and neighbors
+                to help divert some of that organic waste, and help build our soil fertility through our compost
+                program. We were thrilled by the popularity of this idea and were quickly overwhelmed with donations!
+                <br><span class="apricots">-
+                    thank you, Wichita!</span><br><br>
+                <!-- use class  fall-leaves or fall-gradient for color -->
+
+                We gathered leaves from many neighborhoods, including: Overbrook, Crestview, Hawthorne, Lakepoint,
+                Vickridge, Eastborough, Woodlawn Village, and Riverside. We had one kind friend in College Hill organize
+                her whole block! We especially want to thank our friends at <a
+                    href="https://www.nudgecompost.com/">Nudge Compost</a> for putting the word out to their customers.
+                Another thank you goes out to <a href="https://www.treetop-nursery.com/">Tree Top Nursery</a> as they
+                dumped their leaves here for a couple of weeks, too.
+            </p>
+        </div>
+    </div>
+
+    <!-- Begin Soc. Media Banner -->
+    <!-- <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -175,7 +245,9 @@
                 <path
                     d="M422.6 193.6c-5.3-45.3-23.3-51.6-59-54 -50.8-3.5-164.3-3.5-215.1 0 -35.7 2.4-53.7 8.7-59 54 -4 33.6-4 91.1 0 124.8 5.3 45.3 23.3 51.6 59 54 50.9 3.5 164.3 3.5 215.1 0 35.7-2.4 53.7-8.7 59-54C426.6 284.8 426.6 227.3 422.6 193.6zM222.2 303.4v-94.6l90.7 47.3L222.2 303.4z">
                 </path>
-            </svg></a></div>
+            </svg></a></div> -->
+
+    <!-- end Soc. media banner -->
 
     <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
@@ -189,7 +261,7 @@
         }
 
         #mc_embed_signup label {
-            font-size: 1.5em;
+            font-size: 4rem;
         }
 
         #mc_embed_signup .button {
@@ -240,6 +312,10 @@
         }, function () {
             $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
         });
+    </script>
+    <script>
+        var cw = $('.sqr').width();
+        // $('.sqr').css({ 'height': cw + 'px' });
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
