--- a/rise.html
+++ b/rise.html
@@ -63,7 +63,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
+                        aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
 
@@ -119,9 +119,7 @@
                 Rise Farm
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                A <a href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html"
-                    target="_blank">new
-                    parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
+                A new parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
                 later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of
                 the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as
                 well as an event space.<br /> <br />
