--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -48,6 +48,12 @@
             <p class="strike">&#9</p>
         </div> -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
+
+    <div style="display:block" class="text-center">
+        <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
+            alt="Firefly Farm logo" class="img-fluid">
+    </div>
+
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
