--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     <!-- End of Working Carousel -->
     <div class="motto d-flex flex-column mt-md-4 flex-lg-row justify-content-lg-around">
         <p></p>
-        <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
-        <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
-        <p id="m3"><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
+        <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art</span></p>
+        <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine</span></p>
+        <p id="m3"><span class='foodis'>Food is </span><span class='colord'>Social Justice</span></p>
         <p></p>
     </div>
 
@@ -142,7 +142,7 @@
         few
         other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
         friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
-        restaurants partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
+        restaurant partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
         of crops in four seasons.
     </div>
 
