--- a/rise.html
+++ b/rise.html
@@ -199,7 +199,7 @@
     </style>
     <div id="mc_embed_signup">
         <form
-            action="https://tilthwichita.us1.list-manage.com/subscribe/post?u=b5005a84afbcf07d4a915d70e&amp;id=cd168a8d9f"
+            action="https://fireflyfarmwichita.us16.list-manage.com/subscribe/post?u=79e42a0b2038a394e9bd7abf8&amp;id=67f3bb8846"
             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
             target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
@@ -208,7 +208,7 @@
                     required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                        name="b_b5005a84afbcf07d4a915d70e_cd168a8d9f" tabindex="-1" value=""></div>
+                        name="b_79e42a0b2038a394e9bd7abf8_67f3bb8846" tabindex="-1" value=""></div>
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
                         class="button"></div>
             </div>
