--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
                         <a class="dropdown-item" href="rise.html">Rise</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="crew.html">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -108,20 +108,23 @@
     <!-- Working Carousel -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="5000">
+            <div class="carousel-item active" data-bs-interval="4000">
                 <img src="../img/carousel/carousel1.jpg" class="cimg d-block w-100" alt="...">
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="4000">
                 <img src="../img/carousel/carousel2.jpg" class="cimg d-block w-100" alt="...">
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="4000">
                 <img src="../img/carousel/carousel3.jpg" class="cimg d-block w-100" alt="...">
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="4000">
                 <img src="../img/carousel/carousel4.jpg" class="cimg d-block w-100" alt="...">
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="4000">
                 <img src="../img/carousel/carousel5.jpg" class="cimg d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="4000">
+                <img src="../img/carousel/carousel6.jpg" class="cimg d-block w-100" alt="...">
             </div>
             <!-- <div class="carousel-item" data-bs-interval="5000">
             <img src="../img/carousel3.jpg" class="cimg d-block w-100" alt="...">
