--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
             <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
 
             <a class="dropdown-item" href="rise.html">Rise</a>
-            <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+            <a class="dropdown-item" href="crew.html">Our Crew</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -129,7 +129,11 @@
         </div>
       </div> -->
   <!-- start of collection -->
-  <div id='collection-component-1618761155132'></div>
+
+  <h1>Shop Coming Soon!</h1>
+
+  <!-- Collections display w/ rnd crnr -->
+  <!-- <div id='collection-component-1618761155132'></div>
   <script type="text/javascript">
     /*<![CDATA[*/
     (function () {
@@ -175,7 +179,8 @@
                       "position": "absolute",
                       "left": "0",
                       "right": "0",
-                      "top": "0"
+                      "top": "0",
+                      "border-radius": "5%"
                     },
                     "imgWrapper": {
                       "padding-top": "calc(75% + 15px)",
@@ -276,7 +281,7 @@
       }
     })();
     /*]]>*/
-  </script>
+  </script> -->
   <!-- end of collection -->
 
   <h1 id="grow">grow with Firefly Farm online</h1>
