--- a/21ststfarm-OLD.html
+++ b/21ststfarm-OLD.html
@@ -123,7 +123,7 @@
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                Our farm at firefly
+                our farm at Firefly
             </div>
             <p class="just-txt row-text body-text row-text-left">
                 Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that
@@ -175,7 +175,88 @@
         </div>
       </div> -->
     <!-- End of Working Carousel -->
+    <div class="secthead centered" id="crew">our crew</div>
 
+    <div class="container1">
+        <div class="col1 colbio">
+            <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
+                Leah
+            </div>
+            <div class="leahb centered"><img src="../img/crew/leahb.jpg" class="bio biopic"></div>
+            <p class="just-txt leahtxt">
+                Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
+                left her with a deep love of animals and the farming life. She spent her early adult years in New York
+                City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998
+                and marrying the boy next door soon after.<span id="dots">...</span><span id="more"
+                    style="display: none;">
+                    She will never forget the persimmon groves she saw in Korea,
+                    the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia.
+                    Those
+                    far away experiences had a great impact on her ideas about regional agriculture and cuisine. From
+                    the
+                    types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space,
+                    her
+                    vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
+                    seasonal café. She gets little free time these days, but when she does, she enjoys music and the
+                    visual
+                    arts, hiking and kayaking in SE Kansas, and essay writing.</span><span onclick="myFunction()"
+                    id="myBtn" class="apricots">Read more</span>
+            </p>
+
+        </div>
+        <div class="col2 colbio">
+            <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
+                Ron
+            </div>
+            <div class="ronb centered"><img src="../img/crew/ronb.jpg" class="bio biopic"></div>
+            <p class="just-txt rontxt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought
+                the
+                place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
+                all around. Over the years, Ron’s family had a milk cow, beef cattle, a few pigs, some sheep, lots of
+                chickens, hunting dogs, and barn cats.<span id="dots1">...</span><span id="more1"
+                    style="display: none;">
+                    Ron’s dad raised wheat and soy beans and of course, a great, big
+                    garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both
+                    of
+                    which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt
+                    both
+                    shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and
+                    repair
+                    shop here for over thirty years. He is retired now but is an honorary member of our farm team and
+                    contributes more than a little to the never ending job of fixing, repairing, and maintaining
+                    everything.
+                    Almost every corner of this old place has some kind of memorable story attached to it. Now, we are
+                    thrilled to share it with the public and we invite you to make some of your own memorable stories
+                    here,
+                    too!</span><span onclick="myFunction1()" id="myBtn1" class="apricots">Read more</span></p>
+        </div>
+    </div>
+    <div class="container1">
+        <div class="col1 colbio">
+            <div class="secthead m-2 lhead farmhand" style="font-size:6rem!important" align="center">
+                Kyle
+            </div>
+            <div class="leahb centered"><img src="../img/crew/kyleb.jpg" class="bio biopic"></div>
+            <p class="just-txt leahtxt">
+                Kyle is a newly minted high school environmental science teacher with a background in biology, natural
+                resources, and urban agriculture. In addition to teaching, he manages the behind the scenes operations
+                of Firefly and Rise. He first joined the crew during the 2017 growing season before leaving to try on a
+                few other hats. Kyle’s a home chef, an amateur craftsman, and an avid reader--his favorite crops to grow
+                are Pink Brandywine tomatoes, basil, and hot peppers.
+            </p>
+
+        </div>
+        <div class="col2 colbio">
+            <div class="secthead m-2 rhead farmhand" style="font-size:6rem!important" align="center">
+                Tara
+            </div>
+            <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio biopic"></div>
+            <p class="just-txt rontxt">A Wichita original, Tara got her degree in English Literature at Wichita State
+                University and first joined the Firefly team for a season in the summer of 2017. In addition to growing,
+                Tara is a talented ceramics artist, an avid knitter, and baking enthusiast. Her favorite crops are
+                trellised cucumbers, Dinosaur kale, and Thai peppers.
+        </div>
+    </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
