--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -75,7 +75,7 @@
                         <a class="dropdown-item" href="/../21ststfarm.html">Firefly</a>
 
                         <a class="dropdown-item" href="/../rise.html">Rise</a>
-                        <a class="dropdown-item" href="/../21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="/../crew.html">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
