--- a/rise.html
+++ b/rise.html
@@ -68,7 +68,7 @@
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
 
                         <a class="dropdown-item" href="#!">Rise</a>
-                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="crew.html">Our Crew</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
