--- a/rise.html
+++ b/rise.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop.html">Shop</a>
+                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
